kubernetes/yaml/istio/virtual_service.yaml
# istio virtualservice yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app1-vs
spec:
    hosts:
      - "*"
    gateways:
      - gateway
    http:
      - match:
          - uri:
              prefix: /v1
        route:
          - destination:
              host: app1.default.svc.cluster.local
              subset: v1
      - route:
          - destination:
              host: app1.default.svc.cluster.local
              subset: v2
